--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "parkview.backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/test.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node -r dotenv/config src/test.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node -r dotenv/config src/index.js",
+    "test": "node -r dotenv/config src/test.js",
+    "server": "node -r dotenv/config src/server.js",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
     "@supabase/supabase-js": "^2.38.2",
     "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "expo-constants": "^14.4.2",
     "express": "^4.18.2",
