--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-constants": "^14.4.2",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
+    "openai": "^4.14.2",
     "wavefile": "^11.0.0"
   }
 }
