--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/maps": "^1.1.3",
     "@mapbox/polyline": "^1.2.1",
     "@supabase/supabase-js": "^2.38.2",
     "axios": "^1.5.1",
