--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "server": "node -r dotenv/config src/server.js",
+    "test": "node -r dotenv/config src/test.js",
     "build": "tsc"
   },
   "jest": {
